make logging-utils-tddschn an optional dep

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ git-pp = "git_pp.git_pp:main_sync"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-logging-utils-tddschn = "^0.1.5"
+logging-utils-tddschn = {version = "^0.1.5", extras = ["logging"]}
 
 [tool.poetry.dev-dependencies]
 bump2version = "^1.0.1"
