--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ git-pp = "git_pp.git_pp:main_sync"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+uvloop = {version = "^0.16.0", extras = ["uvloop"]}
 
 [tool.poetry.dev-dependencies]
 bump2version = "^1.0.1"
