--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ bump2version = "^1.0.1"
 yapf = "^0.32.0"
 logging-utils-tddschn = "^0.1.5"
 toml = "^0.10.2"
+icecream = "^2.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
