--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ git-pp = "git_pp.git_pp:main_sync"
 [tool.poetry.dependencies]
 python = "^3.10"
 uvloop = {version = "^0.16.0", extras = ["uvloop"]}
+utils-tddschn = "0.1.6"
 
 [tool.poetry.dev-dependencies]
 bump2version = "^1.0.1"
