--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ git-pp = "git_pp.git_pp:main_sync"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-uvloop = {version = "^0.16.0", extras = ["uvloop"], optional = true}
+uvloop = {version = "^0.16.0", optional = true}
 utils-tddschn = "0.1.6"
 
 [tool.poetry.dev-dependencies]
@@ -35,6 +35,9 @@ logging-utils-tddschn = "^0.1.5"
 toml = "^0.10.2"
 icecream = "^2.1.2"
 pyinstrument = "^4.1.1"
+
+[tool.poetry.extras]
+uvloop = ["uvloop"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
